# internal/docs/swagger.json
@@ -175,9 +175,18 @@
                     {
                         "type": "file",
                         "description": "Upload file",
-                        "name": "request",
+                        "name": "file",
                         "in": "formData",
                         "required": true
+                    },
+                    {
+                        "description": "File Upload Model",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/entity.FileUploadRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -1140,6 +1149,18 @@
             "properties": {
                 "message": {
                     "type": "string"
+                }
+            }
+        },
+        "entity.FileUploadRequest": {
+            "type": "object",
+            "properties": {
+                "category": {
+                    "type": "string"
+                },
+                "object_id": {
+                    "description": "File     multipart.File `json:\"file\"`",
+                    "type": "integer"
                 }
             }
         },
